# opencl-kernels

./: .gitignore  README.md  build.sh  pyproject.toml
src/: blas.py  device.py  main.py  ndarray.py  relu.py  sdpa.py
src/activations/: relu.cl
src/attention/: sdpa.cl
src/blas/L1/: isamax.cl  sasum.cl  saxpy.cl  sdot.cl  snrm2.cl  srot.cl  srotg.cl  srotm.cl  srotmg.cl  sscal.cl  sswap.cl
src/blas/L2/: sgbmv.cl  sgemv.cl  sger.cl  ssbmv.cl  ssymv.cl  stbmv.cl  stbsv.cl
src/kernels/: __init__.py  isamax.py  sasum.py  saxpy.py  scopy.py  sdot.py  sgbmv.py  sgemv.py  sger.py  snrm2.py  srot.py  srotg.py  srotm.py  srotmg.py  ssbmv.py  sscal.py  sswap.py  ssymv.py  stbmv.py  stbsv.py
src/opencl_kernels/: blas.py
src/opencl_kernels/blas/L1/: scopy.cl
test/: test_blas.py  test_ndarray.py  test_relu.py  test_sdpa.py
