[project]
name = "oclk"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["numpy>=2.3.1", "pyopencl>=2025.2.4"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["ruff>=0.11.0"]

[tool.ruff]
line-length = 88
indent-width = 2
extend-exclude = ["test"]
